---
title: Class Diagram - Edemy
---
classDiagram
    class _TimestampMixin_ {
        <<mixin>>
        - id: init
        - date_created: datetime
        - date_modified: datetime
    }

    class _SoftDeleteMixin_ {
        <<mixin>>
        - is_active: bool

        - delete() bool
    }

    class _NamedMixin_ {
        <<mixin>>
        - slug: str
        - title: str

        - save() bool
    }

    class _GenericModel_ {
        - str() str
    }

    class _CommonInfo_ {
        <<abstract>>
        - description: str
        - thumbnail: str
        - tags: List~Tag~
    }

    class User {
        - username: str
        - email: str
        - avatar: str
        - password: str
        - first_name: str
        - last_name: str
        - role: Roles
    }

    class Roles {
        <<Enumeration>>
        USER
        TEACHER
        ADMIN
    }

    class Profile {
        user_id: int
        bio: str
        is_premium_member: bool
        has_support_contract: bool
    }

    class Trophy {
        bagde: str
    }

    class UserStats {
        user_id: int
        xp: int
        coins: int
        current_level: int
        daily_streak: int
        longest_streak: int
        last_checkin: datetime
        credits: int
    }   

    class TrophyCabinet {
        user_stats_id: int
        trophy_id: int
    } 

    class Level {
        title: str
        required_xp: int
        coin_reward: int
    }

    class Course {
        - price: float
        - discount: int
        - categories: List~Category~
    }

    class Chapter {
        - order: int
        - description: str
        - course_id: int
    }

    class Lesson {
        - video_url: str
        - content: str
        - chapter_id: str
    }

    class Attempt {

    }

    class Comment {
        - content: str
        - user_id: int
    }

    class _Commentable_ {
        <<interface>>
    }

    class Like {
        - user_id: int
    }

    class _Likeable_ {
        <<interface>>
    }

    class Quiz {
        
    }

    class Choice {

    }

    _GenericModel_ --|> _TimestampMixin_: inheritance
    _GenericModel_ --|> _SoftDeleteMixin_: inheritance
    _GenericModel_ --|> _NamedMixin_: inheritance

    _CommonInfo_ --|> _GenericModel_: inheritance

    Category --|> _GenericModel_: inheritance
    Tag --|> _GenericModel_: inheritance
    Tag "*" -- "*" _CommonInfo_: has
    Course --|> _CommonInfo_: inheritance
    Lesson --|> _CommonInfo_: inheritance
    Chapter --|> _TimestampMixin_: inheritance
    Chapter --|> _SoftDeleteMixin_: inheritance
    Category "*" o-- "*" Course: belongs to
    Course "1" *-- "*" Lesson: has
    User "1" *-- "*" Comment: has
    _Commentable_ "1" *-- "*" Comment: has
    Course --|> _Commentable_: implements
    Lesson --|> _Commentable_: implements
    User "1" *-- "*" Like: has
    _Likeable_ "1" *-- "*" Like: has
    Course --|> _Likeable_: implements
    Lesson --|> _Likeable_: implements
    Course "1" *-- "*" Chapter: has
    Chapter "1" *-- "*" Lesson: has 
    Profile --|> _TimestampMixin_: inheritance
    User "1" --> "1" Profile: has
    Trophy --|> _GenericModel_: inheritance
    User "1" --> "1" UserStats: has
    UserStats "1" *-- "*" TrophyCabinet: has
    Trophy "1" *-- "*" TrophyCabinet: has
    User --> Roles: association
    UserStats "*" --o "1" Level: has